--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
 
         
     
-<marquee behavior="scroll" direction="right"> ------------></marquee>
+<marquee behavior="scroll" direction="right"> >------------></marquee>
 
-<marquee behavior="scroll" direction="left"> <-------------</marquee>
-
-
-<marquee behavior="scroll" direction="right"> ------------></marquee>
+<marquee behavior="scroll" direction="left"> <-------------<</marquee>
 
 
-<marquee behavior="scroll" direction="left"> <-------------</marquee>
+<marquee behavior="scroll" direction="right"> >------------></marquee>
 
 
-<marquee behavior="scroll" direction="right"> ------------></marquee>
+<marquee behavior="scroll" direction="left"> <-------------<</marquee>
 
 
-<marquee behavior="scroll" direction="left"> <-------------</marquee>
+<marquee behavior="scroll" direction="right"> >------------></marquee>
+
+
+<marquee behavior="scroll" direction="left"> <-------------<</marquee>
 
 
 
