--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@
 
 
 
+<button onclick="myFunction()">Hi, A Small Pop-Up Button😀</button>
 
+<script>
+function myFunction() {
+  alert("Hello! I am an alert box!😎");
+}
+</script>
 
 
 
